# rustommerce

./: .env.example  README.md
client/: .gitignore  elm-static-html.json  package-lock.json  package.json
client/.elm-static-html/: PrivateMain.elm  elm-package.json
client/.elm-static-html/Native/: Jsonify.js
client/src/: index.html
client/src/elm/: Main.elm
client/tools/: browsersync.js  build-dev.sh  build-non-elm.sh  build-prod.sh  clean.sh  elm-make-dev.sh  elm-make-prod.sh  generate-env.js
db/: .gitignore  README.md  database_and_user.sh  populate.sh  populate.sql  setup.sh  start.sh  status.sh  stop.sh
rendertron/: README.md  index.js  package-lock.json  package.json
server/: Cargo.toml  README.md  Rocket.toml  TODO.md  elm-static-html-test.sh  setup.sh  start.sh
server/src/: api.rs  cors.rs  files.rs  main.rs
server/templates/: index.html.hbs  template.html.hbs
