[package]
name = "rustommerce"
version = "0.1.0"
authors = ["Roman Frołow"]
edition = "2018"

[dependencies]
postgres = "0.15.2"
serde = "1.0.99"
serde_json = "1.0.40"
serde_derive = "1.0.99"
dotenv = "0.14.1"
time = "0.1.42"
actix-web = "1.0.5"
env_logger = "0.6.2"
typed-html = "0.2.1"
typed-html-macros = "0.2.1"
futures = "0.1.28"
actix-files = "0.1.4"
