[package]
name = "rustommerce"
version = "0.1.0"
authors = ["Roman Frołow"]
edition = "2018"

[dependencies]
postgres = "0.17.5"
serde = "1.0.115"
serde_json = "1.0.57"
serde_derive = "1.0.115"
dotenv = "0.15.0"
time = "0.1.42"
actix-web = "2.0.0"
actix-rt = "1.0.0"
env_logger = "0.7.1"
typed-html = { git = "https://github.com/bodil/typed-html#4c13ecca" }
typed-html-macros = { git = "https://github.com/bodil/typed-html#4c13ecca" }
futures = "0.3.5"
actix-files = "0.2.2"
tinytemplate = "1.1.0"
deadpool-postgres = "0.5.6"
tokio-postgres = "0.5.5"
derive_more = "0.99.9"
