[package]
name = "rustommerce"
version = "0.1.0"
authors = ["Roman Frołow"]
edition = "2018"

[dependencies]
postgres = "0.17.5"
serde = "1.0.116"
serde_json = "1.0.57"
serde_derive = "1.0.116"
dotenv = "0.15.0"
time = "0.2.23"
actix-web = "3.0.2"
actix-rt = "1.1.1"
actix-files = "0.3.0"
env_logger = "0.7.1"
futures = "0.3.5"
deadpool-postgres = "0.5.6"
tokio-postgres = "0.5.5"
derive_more = "0.99.10"
horrorshow = "0.8.3"

[profile.dev]
# disabling debug info to speed up dev builds
# https://github.com/rust-gamedev/wg/issues/50#issuecomment-527160611
# this is for disabling debugininfo only for dependencies
# https://stackoverflow.com/questions/58627230/can-i-include-debug-information-only-for-my-code-without-packages
# Testing procedure. Time before and after:
# $ cargo clean && time cargo build
# real    3m9.674s
# real    3m45.498s
debug = false
